Fixes formulaManager null when HPManager was initialized. Checks and corrects players' HP when loading the plugin.